# ztxexp

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  build.sh  clean.sh  mk.sh  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  workspaceState.state.json
.github/workflows/: ci.yml
docs/: api.md  concepts.zh.md  index.md  migration-v02.zh.md  overview.en.md  quickstart.en.md  quickstart.zh.md  recipes.zh.md  requirements.txt
docs/api/: analyzer.md  environment.md  index.md  manager.md  pipeline.md  runner.md  types.md  utils.md
docs_src/: migration-v04.zh.md  user-manual.zh.md  vibe-coding.zh.md
docs_src/stylesheets/: extra.css
examples/: analyze_results.py  cleanup_results.py  llm_experiment_template.py  main_analyze_results.py  main_cleanup.py  main_run_experiments.py  main_utils_demo.py  minimal_run.py  my_experiment.py  parallel_run.py
examples/template_library/: README.md
examples/template_library/analysis/: cleanup_policy.py  dataframe_csv_export.py  leaderboard_comparison.py  pivot_excel_report.py
examples/template_library/basics/: exp_fn_contract_matrix.py  grid_and_variants.py  manager_runner_split.py  minimal_pipeline.py  multi_seed_repro.py
examples/template_library/llm/: prompt_eval.py  rag_eval.py  safety_eval.py  serving_benchmark.py  tool_use_eval.py
examples/template_library/ml/: anomaly_detection.py  recommendation_ranking.py  tabular_classification.py  tabular_regression.py  time_series_forecasting.py
examples/template_library/ops/: ablation_study.py  budget_limited_search.py  dataset_versioning.py  reproducibility_audit.py  resume_from_checkpoint.py
examples/template_library/parallel/: dynamic_cpu_guard.py  joblib_cpu_heavy.py  process_pool_high_throughput.py  skip_invalid_configs.py
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/search/: search_index.json
skills/ztx-exp-manager/: SKILL.md
skills/ztx-exp-manager/agents/: openai.yaml
tests/: test_cli_skill.py  test_cli_template.py  test_cli_vibe.py  test_docs_user_manual.py  test_docs_vibe_coding.py  test_manager.py  test_pipeline.py  test_runner_analyzer.py  test_templates_smoke.py  test_utils.py
ztxexp/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  environment.py  manager.py  pipeline.py  runner.py  skill.py  template_wizard.py  types.py  utils.py  vibe.py
ztxexp/tracking/: __init__.py  adapters.py  base.py  jsonl.py
