[build-system]
requires = ["setuptools>=67,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztxexp"
version = "0.2.0"
authors = [
    { name = "ztxtech", email = "ztxtech@foxmail.com" },
]
description = "Experiment framework for ML/LLM workflows with reproducible run artifacts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "experiment management",
    "deep learning",
    "large language models",
    "reproducibility",
    "hyperparameter search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dill>=0.3.8",
    "joblib>=1.3",
    "numpy>=1.23",
    "pandas>=1.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pyyaml>=6.0",
]
excel = [
    "openpyxl>=3.1",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.6",
    "twine>=5.0",
    "openpyxl>=3.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://ztxtech.github.io/ztxexp/"
Repository = "https://github.com/ztxtech/ztxexp"
Documentation = "https://ztxtech.github.io/ztxexp/"
Issues = "https://github.com/ztxtech/ztxexp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ztxexp*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools]
license-files = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
